--- a/preview.colorlib.com/theme/careers/index.html
+++ b/preview.colorlib.com/theme/careers/index.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from preview.colorlib.com/theme/careers/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 06 Mar 2021 04:51:06 GMT -->
 <head>
-<title>Careers &mdash; Website Template by Colorlib</title>
+<title>Career Companion &mdash; Website Template by Colorlib</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="css/custom-bs.css">
@@ -29,7 +29,7 @@
 <header class="site-navbar mt-3">
 <div class="container-fluid">
 <div class="row align-items-center">
-<div class="site-logo col-6"><a href="index-2.html">Careers</a></div>
+<div class="site-logo col-6"><a href="index-2.html">Career Companion</a></div>
 <nav class="mx-auto site-navigation">
 <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0">
 <li><a href="index-2.html" class="nav-link active">Home</a></li>
@@ -55,27 +55,43 @@
 <div class="row align-items-center justify-content-center">
 <div class="col-md-12">
 <div class="mb-5 text-center">
-<h1 class="text-white font-weight-bold">A Powerful Career Website Template</h1>
-<p>Find your dream jobs in our powerful career website template.</p>
+<h1 class="text-white font-weight-bold">Find your suitable job</h1>
+<p>Find your dream jobs in our powerful career website </p>
 </div>
 <form method="post" class="search-jobs-form">
 <div class="row mb-5">
 <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0">
-<input type="text" class="form-control form-control-lg" placeholder="Job title, keywords...">
+<input type="text" class="form-control form-control-lg" placeholder="Name">
+</div>
+<form method="post" class="search-jobs-form">
+<div class="row mb-5">
+<div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0">
+<input type="text" class="form-control form-control-lg" placeholder="Email ">
 </div>
 <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0">
 <select class="form-control">
-<option>Anywhere</option>
-<option>San Francisco</option>
-<option>Palo Alto</option>
-<option>New York</option>
-<option>Manhattan</option>
-<option>Ontario</option>
-<option>Toronto</option>
-<option>Kansas</option>
-<option>Mountain View</option>
+<option>Type of Disability</option>
+<option>Vision impairment</option>
+<option>Deaf or hard of hearing</option>
+<option>autism spectrum disorder</option>
+<option>Colour blindness</option>
+<option>Physical Disability</option>
+
  </select>
 </div>
+<div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0">
+<select class="form-control">
+<option>Location</option>
+<option>Vision impairment</option>
+<option>Deaf or hard of hearing</option>
+<option>autism spectrum disorder</option>
+<option>Colour blindness</option>
+<option>Physical Disability</option>
+
+ </select>
+</div>
+
+
 <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0">
 <select class="form-control">
 <option>Part Time</option>
