--- a/preview.colorlib.com/theme/careers/index.html
+++ b/preview.colorlib.com/theme/careers/index.html
@@ -50,7 +50,7 @@
 </div>
 </header>
 
-<section class="home-section section-hero overlay bg-image" style="background-image: url('images/hero_1.jpg');" id="home-section">
+<section class="home-section section-hero overlay bg-image" style="background-image: url('images/7933.jpg');" id="home-section">
 <div class="container">
 <div class="row align-items-center justify-content-center">
 <div class="col-md-12">
@@ -63,8 +63,8 @@
 <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0">
 <input type="text" class="form-control form-control-lg" placeholder="Name">
 </div>
-<form method="post" class="search-jobs-form">
-<div class="row mb-5">
+<form method="post" class="email">
+<div class="row mb-6">
 <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0">
 <input type="text" class="form-control form-control-lg" placeholder="Email ">
 </div>
@@ -79,14 +79,14 @@
 
  </select>
 </div>
-<div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0">
+<div class="col-13 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0">
 <select class="form-control">
 <option>Location</option>
-<option>Vision impairment</option>
-<option>Deaf or hard of hearing</option>
-<option>autism spectrum disorder</option>
-<option>Colour blindness</option>
-<option>Physical Disability</option>
+<option>India</option>
+<option>USA</option>
+<option>dvsvdv</option>
+<option>dsavsdvsdvd</option>
+<option>dsvsdb s</option>
 
  </select>
 </div>
